# uhf-rfid

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: publish.yml  rust.yml
src/: lib.rs  reader.rs  serial.rs  transport.rs  types.rs  uart.rs
